metadata/force-app/main/default/objects/CustomName_ZonHc__c/CustomName_ZonHc__c.object-meta.xml
<CustomObject>
    <description>Description_mTKOP</description>
    <label>CustomLabel_XcQgE</label>
    <nameField>
        <label>CustomLabel_XcQgE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_XcQgEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>