metadata/force-app/main/default/objects/CustomName_ZonHc__c/fields/CustomField_ZwcNh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ZwcNh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgbOAL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>